swiper slides add

--- a/src/globals.css
+++ b/src/globals.css
@@ -1,4 +1,11 @@
+@import "swiper/css";
+@import "swiper/css/navigation";
+@import "swiper/css/pagination";
+@import "swiper/css/effect-fade";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
 
